--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,99 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*:after,
+*:before {
+  box-sizing: inherit;
+  margin: inherit;
+  padding: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.game-board {
+  margin: auto;
+  width: fit-content;
+}
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+.square {
+  background: beige;
+  border: 1px solid #999;
+  float: left;
+  font-size: 50px;
+  font-weight: bold;
+  line-height: 60px;
+  height: 60px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 60px;
+}
+.second {
+  background: lightsalmon;
+}
+
+.square:hover {
+  background-color: slateblue;
+}
+.board-row .game {
+  display: flex;
+  flex-direction: row;
+}
+.selected {
+  background-color: blue;
+}
+.grid-container {
+  background-color: seashell;
+  border: 1px solid #999;
+  display: grid;
+  margin: auto;
+  grid-template-columns: 1fr 1fr;
+  justify-items: stretch;
+  max-width: 472px;
+}
+.grid-item {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+.grid-item h3 {
+  font-size: 30px;
+  border-bottom: 1px solid #999;
+}
+.grid-item p {
+  padding: 10px;
+}
+.grid-item:nth-of-type(1) {
+  border-right: 2px solid #999;
+}
+
+.inactive {
+  color: lightgray;
+}
+.end-move-wrapper {
+  display: flex;
+  margin: auto;
+  margin-top: 20px;
+  max-width: 472px;
+  align-items: center;
+}
+.end-move {
+  background-color: hsl(240, 67%, 94%);
+  text-align: center;
+  text-decoration: none;
+  padding: 3px;
+  margin: auto;
+  font-size: 20px;
+}
+.end-move:hover {
+  background-color: hsl(240, 67%, 95%);
+  box-shadow: 7px 7px 8px -8px;
 }
