--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,6 @@ h1 {
 /* End Move Button
 ------------------ */
 .end-move-wrapper {
-  display: flex;
   margin: 20px auto;
   max-width: 472px;
   align-items: center;
@@ -123,7 +122,6 @@ h1 {
 /* Restart Button
 --------------------- */
 .restart-wrapper {
-  display: flex;
   margin: 20px auto;
   align-items: center;
 }
@@ -187,11 +185,16 @@ h1 {
 }
 
 @media screen and (min-width: 1200px) {
+  h1 {
+    grid-row-start: 1;
+  }
   .game {
-    display: flex;
+    display: grid;
     justify-content: center;
   }
   .right-content {
+    grid-column-start: 2;
+    grid-row-start: 2;
     justify-self: flex-start;
     margin: 0 20px auto 20px;
     margin-bottom: auto;
@@ -199,10 +202,15 @@ h1 {
     max-height: min-content;
     background: rgba(211, 211, 211, 0.7);
     border-radius: 2em;
+    height: 100%;
+    width: 100%;
+  }
+  .status-area {
+    grid-row-start: 3;
   }
   .left-content {
+    grid-row-start: 2;
     margin: auto 0;
-    margin-left: 75px;
   }
   .square {
     font-size: 60px;
@@ -235,17 +243,6 @@ h1 {
     font-size: 1.5em;
     transition: font-size 0.3s both ease-in-out;
   }
-  /* .end-move {
-    text-align: center;
-    text-decoration: none;
-    padding: 3px;
-    margin: auto;
-    font-size: 20px;
-  }
-  .end-move:hover {
-    background-color: hsl(240, 67%, 95%);
-    box-shadow: 7px 7px 8px -8px; 
-  }*/
 }
 
 /* KeyFrame Animations
