--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,9 @@ h1 {
   background-color: slategrey;
   border: 2px solid red;
 }
+.highlighted {
+  border: 2px solid white;
+}
 
 /* Status Area
 ----------------------------------------- */
